// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addon Matrix should render <Error /> when component and pattern are not exist 1`] = `
<Component
  messages={
    Array [
      "Default export component must be present",
      "Parameter pattern must be present",
    ]
  }
>
  <styled.div
    bg="red"
    color="white"
    p={2}
  >
    <div
      className="sc-AxjAm bwuNzm"
      color="white"
    >
      <styled.span
        color="rgb(51, 51, 51)"
        fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
        fontSize={2}
      >
        <span
          className="sc-AxirZ csTfNS"
          color="rgb(51, 51, 51)"
          fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
          fontSize={2}
        >
          Storybook Addon Matrix Error
        </span>
      </styled.span>
      <ul>
        <li
          key="Default export component must be present"
        >
          <styled.span
            color="rgb(51, 51, 51)"
            fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
          >
            <span
              className="sc-AxirZ fGUFMv"
              color="rgb(51, 51, 51)"
              fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
            >
              Default export component must be present
            </span>
          </styled.span>
        </li>
        <li
          key="Parameter pattern must be present"
        >
          <styled.span
            color="rgb(51, 51, 51)"
            fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
          >
            <span
              className="sc-AxirZ fGUFMv"
              color="rgb(51, 51, 51)"
              fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
            >
              Parameter pattern must be present
            </span>
          </styled.span>
        </li>
      </ul>
    </div>
  </styled.div>
</Component>
`;

exports[`addon Matrix should render <Error /> when component is not exist 1`] = `
<Component
  messages={
    Array [
      "Default export component must be present",
    ]
  }
>
  <styled.div
    bg="red"
    color="white"
    p={2}
  >
    <div
      className="sc-AxjAm bwuNzm"
      color="white"
    >
      <styled.span
        color="rgb(51, 51, 51)"
        fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
        fontSize={2}
      >
        <span
          className="sc-AxirZ csTfNS"
          color="rgb(51, 51, 51)"
          fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
          fontSize={2}
        >
          Storybook Addon Matrix Error
        </span>
      </styled.span>
      <ul>
        <li
          key="Default export component must be present"
        >
          <styled.span
            color="rgb(51, 51, 51)"
            fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
          >
            <span
              className="sc-AxirZ fGUFMv"
              color="rgb(51, 51, 51)"
              fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
            >
              Default export component must be present
            </span>
          </styled.span>
        </li>
      </ul>
    </div>
  </styled.div>
</Component>
`;

exports[`addon Matrix should render <Error /> when pattern is not exist 1`] = `
<Component
  messages={
    Array [
      "Parameter pattern must be present",
    ]
  }
>
  <styled.div
    bg="red"
    color="white"
    p={2}
  >
    <div
      className="sc-AxjAm bwuNzm"
      color="white"
    >
      <styled.span
        color="rgb(51, 51, 51)"
        fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
        fontSize={2}
      >
        <span
          className="sc-AxirZ csTfNS"
          color="rgb(51, 51, 51)"
          fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
          fontSize={2}
        >
          Storybook Addon Matrix Error
        </span>
      </styled.span>
      <ul>
        <li
          key="Parameter pattern must be present"
        >
          <styled.span
            color="rgb(51, 51, 51)"
            fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
          >
            <span
              className="sc-AxirZ fGUFMv"
              color="rgb(51, 51, 51)"
              fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
            >
              Parameter pattern must be present
            </span>
          </styled.span>
        </li>
      </ul>
    </div>
  </styled.div>
</Component>
`;

exports[`addon Matrix should render <Matrix /> 1`] = `
Array [
  <styled.div
    mb={3}
  >
    <div
      className="sc-AxjAm dQBEZz"
    >
      <TestComponent>
        <BaseComponent
          text="TEXT"
          title="TITLE"
        >
          <div>
            <h1>
              TITLE
            </h1>
            <p>
              TEXT
            </p>
          </div>
        </BaseComponent>
      </TestComponent>
    </div>
  </styled.div>,
  <Component
    component={[Function]}
    originalProps={Object {}}
    propsPattern={
      Object {
        "text": Array [
          "text pattern 1",
          "text pattern 2",
        ],
        "title": Array [
          undefined,
          "title pattern 1",
        ],
      }
    }
  >
    <Styled(styled.div)
      display="flex"
      flexWrap="wrap"
    >
      <div
        className="sc-AxjAm sc-AxiKw LrCLv"
        display="flex"
      >
        <Styled(styled.div)
          borderRadius={4}
          boxShadow="rgba(0, 0, 0, 0.1) 0px 1px 3px 1px, rgba(0, 0, 0, 0.067) 0px 0px 0px 1px"
          display="flex"
          key="%7B%22text%22%3A%22text%20pattern%201%22%7D"
          m="auto"
          mb={3}
          width={0.3}
        >
          <div
            className="sc-AxjAm sc-AxiKw jBRdbW"
            display="flex"
            width={0.3}
          >
            <styled.div
              bg="rgb(246, 249, 252)"
              p={2}
              width={128}
            >
              <div
                className="sc-AxjAm iZAXki"
                width={128}
              >
                <styled.div
                  key="title"
                >
                  <div
                    className="sc-AxjAm dYfHlB"
                  >
                    <styled.div
                      mb={2}
                    >
                      <div
                        className="sc-AxjAm gmAUyk"
                      >
                        <styled.span
                          color="rgba(51, 51, 51, 0.75)"
                          fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                          fontWeight="bold"
                        >
                          <span
                            className="sc-AxirZ emaXEo"
                            color="rgba(51, 51, 51, 0.75)"
                            fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                            fontWeight="bold"
                          >
                            title
                          </span>
                        </styled.span>
                        : 
                        <styled.span
                          color="rgba(51, 51, 51, 0.75)"
                          fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                        >
                          <span
                            className="sc-AxirZ hXTaPy"
                            color="rgba(51, 51, 51, 0.75)"
                            fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                          >
                            undefined
                          </span>
                        </styled.span>
                      </div>
                    </styled.div>
                  </div>
                </styled.div>
                <styled.div
                  key="text"
                >
                  <div
                    className="sc-AxjAm dYfHlB"
                  >
                    <styled.div
                      mb={2}
                    >
                      <div
                        className="sc-AxjAm gmAUyk"
                      >
                        <styled.span
                          color="rgba(51, 51, 51, 0.75)"
                          fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                          fontWeight="bold"
                        >
                          <span
                            className="sc-AxirZ emaXEo"
                            color="rgba(51, 51, 51, 0.75)"
                            fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                            fontWeight="bold"
                          >
                            text
                          </span>
                        </styled.span>
                        : 
                        <styled.span
                          color="rgba(51, 51, 51, 0.75)"
                          fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                        >
                          <span
                            className="sc-AxirZ hXTaPy"
                            color="rgba(51, 51, 51, 0.75)"
                            fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                          >
                            text pattern 1
                          </span>
                        </styled.span>
                      </div>
                    </styled.div>
                  </div>
                </styled.div>
              </div>
            </styled.div>
            <styled.div
              m={2}
              overflow="hidden"
            >
              <div
                className="sc-AxjAm kUYppd"
                overflow="hidden"
              >
                <BaseComponent
                  text="text pattern 1"
                >
                  <div>
                    <p>
                      text pattern 1
                    </p>
                  </div>
                </BaseComponent>
              </div>
            </styled.div>
          </div>
        </Styled(styled.div)>
        <Styled(styled.div)
          borderRadius={4}
          boxShadow="rgba(0, 0, 0, 0.1) 0px 1px 3px 1px, rgba(0, 0, 0, 0.067) 0px 0px 0px 1px"
          display="flex"
          key="%7B%22title%22%3A%22title%20pattern%201%22%2C%22text%22%3A%22text%20pattern%201%22%7D"
          m="auto"
          mb={3}
          width={0.3}
        >
          <div
            className="sc-AxjAm sc-AxiKw jBRdbW"
            display="flex"
            width={0.3}
          >
            <styled.div
              bg="rgb(246, 249, 252)"
              p={2}
              width={128}
            >
              <div
                className="sc-AxjAm iZAXki"
                width={128}
              >
                <styled.div
                  key="title"
                >
                  <div
                    className="sc-AxjAm dYfHlB"
                  >
                    <styled.div
                      mb={2}
                    >
                      <div
                        className="sc-AxjAm gmAUyk"
                      >
                        <styled.span
                          color="rgba(51, 51, 51, 0.75)"
                          fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                          fontWeight="bold"
                        >
                          <span
                            className="sc-AxirZ emaXEo"
                            color="rgba(51, 51, 51, 0.75)"
                            fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                            fontWeight="bold"
                          >
                            title
                          </span>
                        </styled.span>
                        : 
                        <styled.span
                          color="rgba(51, 51, 51, 0.75)"
                          fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                        >
                          <span
                            className="sc-AxirZ hXTaPy"
                            color="rgba(51, 51, 51, 0.75)"
                            fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                          >
                            title pattern 1
                          </span>
                        </styled.span>
                      </div>
                    </styled.div>
                  </div>
                </styled.div>
                <styled.div
                  key="text"
                >
                  <div
                    className="sc-AxjAm dYfHlB"
                  >
                    <styled.div
                      mb={2}
                    >
                      <div
                        className="sc-AxjAm gmAUyk"
                      >
                        <styled.span
                          color="rgba(51, 51, 51, 0.75)"
                          fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                          fontWeight="bold"
                        >
                          <span
                            className="sc-AxirZ emaXEo"
                            color="rgba(51, 51, 51, 0.75)"
                            fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                            fontWeight="bold"
                          >
                            text
                          </span>
                        </styled.span>
                        : 
                        <styled.span
                          color="rgba(51, 51, 51, 0.75)"
                          fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                        >
                          <span
                            className="sc-AxirZ hXTaPy"
                            color="rgba(51, 51, 51, 0.75)"
                            fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                          >
                            text pattern 1
                          </span>
                        </styled.span>
                      </div>
                    </styled.div>
                  </div>
                </styled.div>
              </div>
            </styled.div>
            <styled.div
              m={2}
              overflow="hidden"
            >
              <div
                className="sc-AxjAm kUYppd"
                overflow="hidden"
              >
                <BaseComponent
                  text="text pattern 1"
                  title="title pattern 1"
                >
                  <div>
                    <h1>
                      title pattern 1
                    </h1>
                    <p>
                      text pattern 1
                    </p>
                  </div>
                </BaseComponent>
              </div>
            </styled.div>
          </div>
        </Styled(styled.div)>
        <Styled(styled.div)
          borderRadius={4}
          boxShadow="rgba(0, 0, 0, 0.1) 0px 1px 3px 1px, rgba(0, 0, 0, 0.067) 0px 0px 0px 1px"
          display="flex"
          key="%7B%22text%22%3A%22text%20pattern%202%22%7D"
          m="auto"
          mb={3}
          width={0.3}
        >
          <div
            className="sc-AxjAm sc-AxiKw jBRdbW"
            display="flex"
            width={0.3}
          >
            <styled.div
              bg="rgb(246, 249, 252)"
              p={2}
              width={128}
            >
              <div
                className="sc-AxjAm iZAXki"
                width={128}
              >
                <styled.div
                  key="title"
                >
                  <div
                    className="sc-AxjAm dYfHlB"
                  >
                    <styled.div
                      mb={2}
                    >
                      <div
                        className="sc-AxjAm gmAUyk"
                      >
                        <styled.span
                          color="rgba(51, 51, 51, 0.75)"
                          fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                          fontWeight="bold"
                        >
                          <span
                            className="sc-AxirZ emaXEo"
                            color="rgba(51, 51, 51, 0.75)"
                            fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                            fontWeight="bold"
                          >
                            title
                          </span>
                        </styled.span>
                        : 
                        <styled.span
                          color="rgba(51, 51, 51, 0.75)"
                          fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                        >
                          <span
                            className="sc-AxirZ hXTaPy"
                            color="rgba(51, 51, 51, 0.75)"
                            fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                          >
                            undefined
                          </span>
                        </styled.span>
                      </div>
                    </styled.div>
                  </div>
                </styled.div>
                <styled.div
                  key="text"
                >
                  <div
                    className="sc-AxjAm dYfHlB"
                  >
                    <styled.div
                      mb={2}
                    >
                      <div
                        className="sc-AxjAm gmAUyk"
                      >
                        <styled.span
                          color="rgba(51, 51, 51, 0.75)"
                          fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                          fontWeight="bold"
                        >
                          <span
                            className="sc-AxirZ emaXEo"
                            color="rgba(51, 51, 51, 0.75)"
                            fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                            fontWeight="bold"
                          >
                            text
                          </span>
                        </styled.span>
                        : 
                        <styled.span
                          color="rgba(51, 51, 51, 0.75)"
                          fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                        >
                          <span
                            className="sc-AxirZ hXTaPy"
                            color="rgba(51, 51, 51, 0.75)"
                            fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                          >
                            text pattern 2
                          </span>
                        </styled.span>
                      </div>
                    </styled.div>
                  </div>
                </styled.div>
              </div>
            </styled.div>
            <styled.div
              m={2}
              overflow="hidden"
            >
              <div
                className="sc-AxjAm kUYppd"
                overflow="hidden"
              >
                <BaseComponent
                  text="text pattern 2"
                >
                  <div>
                    <p>
                      text pattern 2
                    </p>
                  </div>
                </BaseComponent>
              </div>
            </styled.div>
          </div>
        </Styled(styled.div)>
        <Styled(styled.div)
          borderRadius={4}
          boxShadow="rgba(0, 0, 0, 0.1) 0px 1px 3px 1px, rgba(0, 0, 0, 0.067) 0px 0px 0px 1px"
          display="flex"
          key="%7B%22title%22%3A%22title%20pattern%201%22%2C%22text%22%3A%22text%20pattern%202%22%7D"
          m="auto"
          mb={3}
          width={0.3}
        >
          <div
            className="sc-AxjAm sc-AxiKw jBRdbW"
            display="flex"
            width={0.3}
          >
            <styled.div
              bg="rgb(246, 249, 252)"
              p={2}
              width={128}
            >
              <div
                className="sc-AxjAm iZAXki"
                width={128}
              >
                <styled.div
                  key="title"
                >
                  <div
                    className="sc-AxjAm dYfHlB"
                  >
                    <styled.div
                      mb={2}
                    >
                      <div
                        className="sc-AxjAm gmAUyk"
                      >
                        <styled.span
                          color="rgba(51, 51, 51, 0.75)"
                          fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                          fontWeight="bold"
                        >
                          <span
                            className="sc-AxirZ emaXEo"
                            color="rgba(51, 51, 51, 0.75)"
                            fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                            fontWeight="bold"
                          >
                            title
                          </span>
                        </styled.span>
                        : 
                        <styled.span
                          color="rgba(51, 51, 51, 0.75)"
                          fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                        >
                          <span
                            className="sc-AxirZ hXTaPy"
                            color="rgba(51, 51, 51, 0.75)"
                            fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                          >
                            title pattern 1
                          </span>
                        </styled.span>
                      </div>
                    </styled.div>
                  </div>
                </styled.div>
                <styled.div
                  key="text"
                >
                  <div
                    className="sc-AxjAm dYfHlB"
                  >
                    <styled.div
                      mb={2}
                    >
                      <div
                        className="sc-AxjAm gmAUyk"
                      >
                        <styled.span
                          color="rgba(51, 51, 51, 0.75)"
                          fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                          fontWeight="bold"
                        >
                          <span
                            className="sc-AxirZ emaXEo"
                            color="rgba(51, 51, 51, 0.75)"
                            fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                            fontWeight="bold"
                          >
                            text
                          </span>
                        </styled.span>
                        : 
                        <styled.span
                          color="rgba(51, 51, 51, 0.75)"
                          fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                        >
                          <span
                            className="sc-AxirZ hXTaPy"
                            color="rgba(51, 51, 51, 0.75)"
                            fontFamily="\\"Nunito Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif"
                          >
                            text pattern 2
                          </span>
                        </styled.span>
                      </div>
                    </styled.div>
                  </div>
                </styled.div>
              </div>
            </styled.div>
            <styled.div
              m={2}
              overflow="hidden"
            >
              <div
                className="sc-AxjAm kUYppd"
                overflow="hidden"
              >
                <BaseComponent
                  text="text pattern 2"
                  title="title pattern 1"
                >
                  <div>
                    <h1>
                      title pattern 1
                    </h1>
                    <p>
                      text pattern 2
                    </p>
                  </div>
                </BaseComponent>
              </div>
            </styled.div>
          </div>
        </Styled(styled.div)>
      </div>
    </Styled(styled.div)>
  </Component>,
]
`;
